--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorBG"
     android:orientation="vertical"
 >
 <Button
@@ -12,7 +12,9 @@
     android:layout_height="wrap_content"
     android:text="@string/btn_weather"
     android:onClick="onClickWeather"
-    android:layout_margin="5dp"
+    android:background="@color/colorAccent"
+    android:textColor="@color/colorWhite"
+    android:layout_margin="@dimen/common_dimen10"
     />
 
 </LinearLayout>
