--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorBG"
 >
 
     <ListView
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:dividerHeight="1dp"
         android:background="@android:color/transparent"
-        android:divider="@color/colorWhite"
+        android:divider="@color/colorDivider"
         />
 </RelativeLayout>
